# mlops-example

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_poc_tables.py
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: __init__.py  base.py  dataset.py  experiment.py  project.py  team.py  user.py
backend/app/routers/: auth.py  datasets.py  experiments.py  projects.py
backend/app/schemas/: common.py  dataset.py  experiment.py  user.py
backend/app/services/: auth_service.py  dataset_service.py  storage_service.py
backend/app/utils/: security.py
cli/: pyproject.toml
cli/mlops_cli/: cli.py  config.py
cli/mlops_cli/commands/: auth.py  dataset.py
cli/mlops_cli/services/: api_client.py
docs/phases/: 00-OVERVIEW.md  01-PHASE-0-POC.md  02-PHASE-1-MVP.md  03-PHASE-2-FEATURES.md  04-PHASE-3-ADVANCED.md
docs/tasks/01-backend-init/: 01-pyproject-toml.md  02-dockerfile.md  03-main-py.md  04-config-py.md  05-database-py.md  06-dependencies-py.md
docs/tasks/02-data-model/: 01-base-py.md  02-user-py.md  03-team-py.md  04-project-py.md  05-dataset-py.md  06-experiment-py.md  07-init-py.md
docs/tasks/03-schemas/: 01-common-py.md  02-user-py.md  03-dataset-py.md  04-experiment-py.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
train/: .env.example  config.py  pyproject.toml  run.py  s3.py  train.py
(+43 files in other folders)
