[project]
name = "mlops-cli"
version = "0.1.0"
description = "MLOps Platform CLI for local YOLO training"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.31",
]

[project.scripts]
mlops-cli = "mlops_cli.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
