[project]
name = "train-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["ultralytics", "torch", "torchvision"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
